Example and classification

--- a/HTML_CHEAT_SHEET.html
+++ b/HTML_CHEAT_SHEET.html
@@ -9,11 +9,39 @@
 <body>
     <h1>HTML CHEAT SHEET</h1>
     <h2>What is HTML?</h2>
-    <ul>
-        <li>HTML stands for HyperText Markup Language.</li>
-        <li>It is used for creating webpages.</li>
-        <li>It is a markup language with no programming syntax. The language provides a structure to design webpages.</li>
-        <li>Using HTML, one can define elements such as headings, paragraphs, links, images, etc.</li>
-    </ul>
+    <p>
+        <ul>
+            <li>HTML stands for HyperText Markup Language.</li>
+            <li>It is used for creating webpages.</li>
+            <li>It is a markup language with no programming syntax. The language provides a structure to design webpages.</li>
+            <li>Using HTML, one can define elements such as headings, paragraphs, links, images, etc.</li>
+        </ul>
+    </p>
+    <h4>Example of HTML:-</h4>
+        <p>&lt;&excl;DOCTYPE html&gt;</p>
+        <p>&lt;html&gt;</body></p>
+        <p>&lt;head&gt;</p>
+        <p>&lt;title&gt;HTML CHEAT SHEET&lt;/title&gt;</p>
+        <p>&lt;/head&gt;</p>
+        <p>&lt;body&gt;</p>
+        <p>&lt;h1&gt;What is HTML?&lt;/h1&gt;</p>
+        <p>&lt;p&gt;This is an example of HTML&lt;p&gt;</p>
+        <p>&lt;/body&gt;</p>
+        <p>&lt;/html&gt;</p>
+    <h4>Output on Browser:-</h4>
+    
+    <h4>Classification of above program:-</h4>
+    <p>
+        <ul>
+            <li>&lt;&excl;DOCTYPE html&gt; - it tells that this is an HTML document.</li>
+            <li>&lt;html&gt; - it is the starting element of an HTML document under which all other elements are present.</li>
+            <li>&lt;head&gt; - it contains information about the page such as title of the page, metadata, etc.</li>
+            <li>&lt;title&gt; - it contains the title of the page which is shown in the browser's title bar.</li>
+            <li>&lt;body&gt; - it contains the main content of the page.</li>
+            <li>&lt;h1&gt; - it is a heading tag used for defining heading of a page.</li>
+            <li>&lt;p&gt; - it is a paragrapgh tag used for defining paragraph of a page.</li>
+        </ul>
+    </p>
+    
 </body>
 </html>
