Center Tag, Strong Tag, em Tag, br Tag and Title Tag

--- a/HTML_CHEAT_SHEET.html
+++ b/HTML_CHEAT_SHEET.html
@@ -224,6 +224,79 @@
             <br>
             The headings &lt;h1&gt; to &lt;h6&gt; tags are block-level elements. They start on a new line.
         </p>
+
+        <li><b>Center Tag</b></li>
+        <p>
+            The HTML &lt;center&gt; tag displays the contents inside it at the center of the page.
+            <br>
+            For example,
+            <br>
+            &lt;center&gt;HTML center tag&lt;center&gt;
+            <br>
+            <br>
+
+            Output on Browser:-
+            <br>
+            <br>
+            <center>HTML center tag</center>
+        </p>
+
+        <li><b>Strong Tag</b></li>
+        <p>
+            The HTML &&lt;strong&gt; tag is used to mark the text as important. Browsers automatically make the contents inside it in bold.
+            <br>
+            For example,
+            <br>
+            &lt;strong&gt;HTML strong tag&lt;strong&gt;
+            <br>
+            <br>
+
+            Output on Browser:-
+            <br>
+            <br>
+            <strong>HTML strong tag</strong>
+        </p>
+
+        <li><b>em Tag</b></li>
+        <p>
+            The HTML &lt;em&gt; tag is used to emphasize the text.
+            <br>
+            For example,
+            <br>
+            &lt;em&gt;em tag&lt;em&gt;
+            <br>
+            <br> 
+
+            Output on Browser:-
+            <br>
+            <br>
+            <em>em tag</em>
+        </p>
+
+        <li><b>br Tag</b></li>
+        <p>
+            The HTML &lt;br&gt; tag is used to insert a single line break in a text. The &lt;br&gt; tag does not need a closing tag like other tags such as &lt;p&gt; tag.
+            <br>
+            For example;
+            <br>
+            &lt;p&gt; We can use the &lt;br&gt; HTML br tag &lt;br&gt; tag to add a line break. &lt;p&gt;
+            <br>
+            <br>
+
+            Output on Browser:-
+            <br>
+            <br>
+            <p>We can use the <br> HTML br tag <br>tag to add a line break.</p>
+        </p>
+
+        <li><b>Title Tag</b></li>
+        <p>
+            The HTML &lt;title&gt; tag defines the title of the webpage. It appears on a browser tab. It is much more important to SEO for ranking in Google.
+            <br>
+            For example; 
+            <br>
+            &lt;title&gt; The title of this page is "HTML CHEAT SHEET" &lt;title&gt;
+        </p>
     </ol>
 
     </p>
